--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -31,12 +31,12 @@ jobs:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-    needs:
-    - test-pypi-package
+#    needs:
+#    - test-pypi-package
     runs-on: ubuntu-latest
     environment:
       name: release
-      url: https://pypi.org/p/changedetection.io
+      url: https://pypi.org/p/pyppeteer-ng
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
