--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -31,8 +31,8 @@ jobs:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-#    needs:
-#    - test-pypi-package
+    needs:
+    - build
     runs-on: ubuntu-latest
     environment:
       name: release
