Updating with mainly newer pillow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ aenum = "^2.2.3"
 appdirs = "^1.4.3"
 certifi = ">=2019.11.28"
 ordered_set = "^4.0.1"
-pillow = "^7.1.2"
+pillow = ">=9.3"
 pyee = "^11.0.0"
 tqdm = "^4.42.1"
 typing_extensions = { version ="^3.7.4", python = '>=3.8'}
